fixes height of textarea on small screens

--- a/client/styles/_about.sass
+++ b/client/styles/_about.sass
@@ -11,6 +11,7 @@ $column-to-row: 675px
 
 .about-links-wrapper
     width: 100%
+    flex: 1
     height: 100%
     max-width: 850px
     padding: $spacer-1 0
