--- a/client/styles/_contact.sass
+++ b/client/styles/_contact.sass
@@ -58,6 +58,7 @@
             input:focus, input:active, textarea:focus, textarea:active
                 outline: 2px solid $accent-2
             textarea
+                min-height: 150px
                 height: 200px
                 font-family: $font
         button
